<resources>
    <string name="app_name">Messenger App</string>
    <string name="login_nickname">Enter your nickname</string>
    <string name="login_password">Enter your password</string>
    <string name="profile_nickname">Nickname</string>
    <string name="profile_about">About</string>
    <string name="login_about">What I do</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="update">Update</string>
    <string name="not_registered">Not Registered?</string>
    <string name="label_home">Home</string>
    <string name="label_profile">Profile</string>
    <string name="search">Search</string>
    <string name="user_not_found">User not found</string>
    <string name="message">Message</string>
</resources>