<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".main.profile.view.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_avatar"
        android:layout_width="@dimen/login_image_radius"
        android:layout_height="@dimen/login_image_radius"
        android:layout_marginTop="@dimen/login_image_margin_top"
        app:cardCornerRadius="@dimen/login_image_corner_radius"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/profile_picture_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_account_circle_96" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nickname_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_input_height"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:layout_marginTop="@dimen/margin_xxl"
        android:background="@drawable/bg_login_input"
        android:hint="@string/profile_nickname"
        android:gravity="center"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/about_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_input_height"
        android:layout_marginHorizontal="@dimen/margin_l"
        android:layout_marginTop="@dimen/margin_s"
        android:background="@drawable/bg_login_input"
        android:gravity="center"
        android:hint="@string/profile_about"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_btn"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="@dimen/login_btn_height"
        android:layout_marginTop="@dimen/margin_l"
        android:background="@drawable/bg_login_btn"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="@dimen/login_btn_text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_out_btn"
        android:layout_width="@dimen/login_btn_width"
        android:layout_height="@dimen/login_btn_height"
        android:layout_marginTop="@dimen/margin_xs"
        android:layout_marginBottom="@dimen/margin_s"
        android:background="@drawable/bg_login_btn_secondary"
        android:text="@string/sign_out"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/login_btn_text_size" />

    <ProgressBar
        android:id="@+id/loading_pb"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="@dimen/margin_s"
        android:layout_height="@dimen/margin_s"/>


</LinearLayout>